# JobHive

./: .env.sample  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  api.py  async_queue.py  index.html  jobhive.py  pyproject.toml  socket_server.py  stream.py
agent_actors/: __init__.py  actors.py  callback_manager.py  generate_summary.py  run.py  toolkit.py
agent_actors/chains/: child.py
client_data/chroma/: chroma-collections.parquet  chroma-embeddings.parquet
client_data/chroma/index/: id_to_uuid_1f245905-d9ef-4ea3-8ce8-e41ae42d1865.pkl  id_to_uuid_6edc3320-5681-4743-9382-900cb538db53.pkl  index_metadata_1f245905-d9ef-4ea3-8ce8-e41ae42d1865.pkl  index_metadata_6edc3320-5681-4743-9382-900cb538db53.pkl  uuid_to_id_1f245905-d9ef-4ea3-8ce8-e41ae42d1865.pkl  uuid_to_id_6edc3320-5681-4743-9382-900cb538db53.pkl
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/agentResponse/: AgentResponse.css  AgentResponse.jsx
frontend/src/components/childSummaryRenderer/: ChildSummaryRenderer.jsx
frontend/src/components/fileUpload/: FileUpload.css  FileUpload.jsx
frontend/src/components/listRenderer/: ListRenderer.jsx
frontend/src/components/memoryRenderer/: MemoryRenderer.jsx
frontend/src/components/objectRenderer/: ObjectRenderer.jsx
frontend/src/components/resultCard/: ResultCard.jsx  ResultCard.module.css
frontend/src/components/taskList/: TaskList.jsx
frontend/src/components/typingEffect/: TypingEffect.css  TypingEffect.jsx
frontend/src/pages/: Home.jsx
utils/: style_outputs.py  terminal_display.py
(+1 files in other folders)
